Fixed card color dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .card {
-    background-color: #4c566a;
+    background-color: #434c5e;
 }
 
 .card-body {
